# data_science

./: .gitattributes  .gitignore  PROJECT_SETUP.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: data-collection.yml  data-preprocessing.yml  modeling.yml  question.yml  visualization.yml  weekly-planning.yml
notebooks/: 00_data_dictionary.ipynb  01_exploration.ipynb  02_preprocessing.ipynb  04_results.ipynb
src/dpp/: data.py
